--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.5.2/css/sharp-light.css"
     />
-  
+
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-BPMS41FJD2"
@@ -95,6 +95,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
